# textgenerator

./: CMakeLists.txt  README.md
examples/: resultOrwell.txt  resultSchopenhauer.txt  resultWarAndPeaceTomes4in1.txt
src/: dictionary.cpp  dictionary.h  generator.cpp  generator.h  main.cpp  model.cpp  model.h  utils.cpp  utils.h
test/: test_dictionary.cpp  test_generator.cpp  test_model.cpp  test_utils.cpp
